--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,20 +3,11 @@
     font-size: large;
 }
 
-h2 {
-    text-align: center;
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: white;
-    padding: 30px 0;
-}
-
 /* Table Styles */
 
 .table-wrapper {
-    margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+    margin: 10px 70px 30px;
+    box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.2);
 }
 
 .fl-table {
@@ -123,4 +114,13 @@ h2 {
         display: block;
         text-align: center;
     }
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    background: #f8f8f8;
+    border-bottom: 1px solid #e6e4e4;
 }
