--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -47,6 +47,8 @@
     background: #f8f8f8;
 }
 
+//Loading Styles
+
 .text-holder {
     display: flex;
     justify-content: center;
@@ -55,6 +57,98 @@
     width: auto;
     height: 1600px;
 }
+
+
+//Navigation Styles
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    background: #f8f8f8;
+    border-bottom: 1px solid #e6e4e4;
+}
+
+//Filter Styles
+
+.filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    select {
+        margin: 0 20px 0px 5px;
+    }
+}
+
+.range-sliders {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-holder {
+    text-align: center;
+}
+
+.countries,
+.products,
+.chart,
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.number-input {
+    display: flex;
+    justify-content: space-around;
+    .min,
+    .max {
+        width: 40%;
+        input {
+            width: 100%;
+        }
+    }
+}
+
+//Chart Styles
+
+.custom-tooltip {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    p {
+        font-size: 1rem;
+        margin: 0;
+    }
+    .tooltip-background {
+        position: absolute;
+        top: -10%;
+        left: -10%;
+        width: 120%;
+        height: 120%;
+        background: rgba(130, 130, 130, 0.5);
+        z-index: -1;
+        border-radius: 10px;
+    }
+}
+
+button,
+input.form-button {
+    background: #4fc3a1;
+    border: none;
+    border-radius: 30px;
+    padding: 5px 10px;
+    color: white;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+
 
 /* Responsive */
 
@@ -130,88 +224,4 @@
     .text-holder {
         height: 500px;
     }
-}
-
-.navigation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0;
-    background: #f8f8f8;
-    border-bottom: 1px solid #e6e4e4;
-}
-
-.filters {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    select {
-        margin: 0 20px 0px 5px;
-    }
-}
-
-.range-sliders {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.button-holder {
-    text-align: center;
-}
-
-.countries,
-.products,
-.chart,
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.number-input {
-    display: flex;
-    justify-content: space-around;
-    .min,
-    .max {
-        width: 40%;
-        input {
-            width: 100%;
-        }
-    }
-}
-
-.custom-tooltip {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    p {
-        font-size: 1rem;
-        margin: 0;
-    }
-    .tooltip-background {
-        position: absolute;
-        top: -10%;
-        left: -10%;
-        width: 120%;
-        height: 120%;
-        background: rgba(130, 130, 130, 0.5);
-        z-index: -1;
-        border-radius: 10px;
-    }
-}
-
-button,
-input.form-button {
-    background: #4fc3a1;
-    border: none;
-    border-radius: 30px;
-    padding: 5px 10px;
-    color: white;
-    font-size: 0.9rem;
-    cursor: pointer;
 }
